// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MathEquation editor plugins.renderNode calls next 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "mockNode",
    }
  }
/>
`;

exports[`MathEquation editor plugins.renderNode renders a button when passed 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.MathEquation",
    }
  }
/>
`;
